--- a/MP_Grids.css
+++ b/MP_Grids.css
@@ -7,7 +7,7 @@ div.row {
 
 div.row::after {
     clear: both;
-    content: "";
+    content: "eggg egg egge ggege eegegegeg ";
     display: table;
 }
 
