--- a/MP_Styles.css
+++ b/MP_Styles.css
@@ -1,17 +1,26 @@
 /* html styles */
 
 html {
-  background-color: antiquewhite;
+  background: url(Forest_Background.jpeg) center center / cover no-repeat fixed;
+  height: 100%;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 12px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 /* body styles */
 
 body {
-  background-color: rgb(204, 195, 151);
+  background-color: rgb(2, 31, 16);
   font-family: Verdana, Geneva, Arial, sans-serif;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
+  margin: 10%;
+}
+
+article {
+  float: left;
+  color: white;
+  display: block;
 }
 
 ul {
@@ -22,12 +31,12 @@ ul {
   background-color: #333;
 }
 
-li {
+ul > li {
   float: left;
   width: 20%;
 }
 
-li a {
+ul > li a {
   display: block;
   color: white;
   text-align: center;
@@ -35,6 +44,6 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
-    background-color: #111;
-  }
+ul > li a:hover {
+  background-color: #111;
+}
